# vectormigrate

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  live-backends.yml  release.yml
docs/: architecture.md  design.md  examples.md  figures.md  paper_system_model.md
examples/: example_artifacts_and_telemetry.py  example_assets_and_notebook.py  example_backend_requests.py  example_compatibility.py  example_registry_and_plan.py  sample_documents.csv  sample_documents.jsonl  sample_paired_vectors.jsonl  sample_queries.csv  sample_queries.jsonl
notebooks/: vectormigrate_walkthrough.ipynb
scripts/: run_live_backend_tests.py
src/vectormigrate/: __init__.py  artifacts.py  benchmarks.py  cli.py  community.py  compat.py  datasets.py  demo.py  embedder.py  errors.py  evaluation.py  fusion.py  io.py  models.py  notebook.py  orchestrator.py  plugins.py  registry.py  reporting.py  routing.py  telemetry.py  validation.py  vector_store.py
src/vectormigrate/backends/: __init__.py  base.py  opensearch.py  pgvector.py  qdrant.py  weaviate.py
tests/fixtures/demo_plugin/: pyproject.toml
tests/fixtures/demo_plugin/src/vectormigrate_demo_plugin/: __init__.py
tests/integration/: test_cli.py  test_example_scripts.py  test_live_backends.py  test_orchestrator.py  test_plugin_packaging.py
tests/unit/: test_artifacts_plugins_telemetry.py  test_backend_adapters_extra.py  test_benchmarks.py  test_compat.py  test_fusion_and_eval.py  test_io_and_datasets.py  test_models.py  test_notebook_and_examples.py  test_opensearch_adapter.py  test_registry_and_reporting.py  test_routing.py  test_validation.py  test_vector_store.py
