[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vectormigrate"
version = "1.0.0"
description = "Python-first tooling for safe embedding-model migration across vector retrieval systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Goutam Adwant" }]
keywords = [
    "embeddings",
    "vector-database",
    "retrieval",
    "migration",
    "rag",
    "ai-infrastructure",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
integration = [
    "psycopg[binary]>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/goutamadwant/vectormigrate"
Repository = "https://github.com/goutamadwant/vectormigrate"
Issues = "https://github.com/goutamadwant/vectormigrate/issues"
Documentation = "https://github.com/goutamadwant/vectormigrate/tree/main/docs"

[project.scripts]
vectormigrate = "vectormigrate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vectormigrate"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config --cov=vectormigrate --cov-report=term-missing"
xfail_strict = true
markers = [
    "live_backend: requires live backend infrastructure such as Docker-managed services",
]

[tool.coverage.run]
source = ["vectormigrate"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
